--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,16 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<jersey.version>2.4.1</jersey.version>
+		<github.global.server>github</github.global.server>
 	</properties>
+
+	<distributionManagement>
+	    <repository>
+	        <id>internal.repo</id>
+	        <name>Temporary Staging Repository</name>
+	        <url>file://${project.build.directory}/mvn-repo</url>
+    	</repository>
+	</distributionManagement>
 
 	<dependencies>
 		<dependency>
@@ -48,7 +57,6 @@
 	</dependencies>
 
 	<build>
-
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -72,6 +80,37 @@
 					<outputDirectory>${basedir}/target/assembly</outputDirectory>
 				</configuration>
 			</plugin>
+   			<plugin>
+        		<artifactId>maven-deploy-plugin</artifactId>
+        		<version>2.8.1</version>
+        		<configuration>
+            		<altDeploymentRepository>internal.repo::default::file://${project.build.directory}/mvn-repo</altDeploymentRepository>
+        		</configuration>
+			</plugin>
+        <plugin>
+            <groupId>com.github.github</groupId>
+            <artifactId>site-maven-plugin</artifactId>
+            <version>0.11</version>
+            <configuration>
+                <message>Maven artifacts for ${project.version}</message>
+                <noJekyll>true</noJekyll>
+                <outputDirectory>${project.build.directory}/mvn-repo</outputDirectory>
+                <branch>refs/heads/feedzilla-java</branch>
+                <includes><include>**/*</include></includes>
+                <repositoryName>feedzilla-java</repositoryName>
+                <repositoryOwner>sidorovis</repositoryOwner>
+            </configuration>
+            <executions>
+              <execution>
+                <goals>
+                  <goal>site</goal>
+                </goals>
+                <phase>deploy</phase>
+              </execution>
+            </executions>
+        </plugin>
+
+
 		</plugins>
 	</build>
 </project>
